--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
   "dependencies": {
     "firebase-admin": "^6.0.0",
     "express": "*",
-    "md5": "*"
+    "md5": "*",
+    "grunt": "^0.4.5",
+    "grunt-angular-templates": "^1.1.0",
+    "grunt-contrib-cssmin": "^0.10.0",
+    "grunt-contrib-less": "^0.11.4",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-uglify": "^0.6.0"
   },
   "engines": {
     "node": "8.11.1"
