--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "vtex-static",
+  "name": "4ad",
   "version": "0.1.0",
   "scripts": {
-    "heroku-postbuild": "grunt def",
     "start": "node web.js"
   },
   "devDependencies": {
@@ -19,13 +18,7 @@
   "dependencies": {
     "firebase-admin": "^6.0.0",
     "express": "*",
-    "md5": "*",
-    "grunt": "^0.4.5",
-    "grunt-angular-templates": "^1.1.0",
-    "grunt-contrib-cssmin": "^0.10.0",
-    "grunt-contrib-less": "^0.11.4",
-    "grunt-contrib-nodeunit": "~0.4.1",
-    "grunt-contrib-uglify": "^0.6.0"
+    "md5": "*"
   },
   "engines": {
     "node": "8.11.1"
