--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "grunt-contrib-less": "^0.11.4",
     "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-uglify": "^0.6.0",
-    "md5": "*"
+    "md5": "*",
+    "google-spreadsheet": "^2.0.7"
   },
   "dependencies": {
-    "firebase-admin": "^6.0.0",
     "express": "*",
+    "firebase-admin": "^6.0.0",
+    "google-spreadsheet": "^2.0.7",
     "md5": "*"
   },
   "engines": {
